# Fanplayer-android

./: .gitignore  README.md  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/avkcpdemuxer/: avkcpc.c  avkcpc.h  avkcpd.c  avkcpd.h  ikcp.c  ikcp.h  ringbuf.c
app/src/main/cpp/ffrdpdemuxer/: ffrdp.c  ffrdp.h  ffrdpc.c  ffrdpc.h  ffrdpd.c  ffrdpd.h  ringbuf.h
app/src/main/cpp/include/: soundtouch.h
app/src/main/cpp/include/libavutil/: ffversion.h  rational.h
app/src/main/cpp/libs/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libcrypto.pc  libssl.pc  libswresample.pc  libswscale.pc  openssl.pc
app/src/main/cpp/src/: adev-android.cpp  adev-win.c  adev.h  dxva2hwa.c  dxva2hwa.h  fanplayer_jni.cpp  ffrender.c  pktqueue.c  pktqueue.h  recorder.c  recorder.h  snapshot.c  snapshot.h  stdefine.h  vdev-android.cpp  vdev-cmn.c  vdev-d3d.c  vdev-gdi.c  vdev.h
app/src/main/cpp/utils/: GLUtils.cpp  GLUtils.h  ImageDef.h  LogUtil.h
app/src/main/java/com/rockcarry/fanplayer/: MainActivity.java  playerView.java
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
